[gd_scene load_steps=2 format=3 uid="uid://cilsgeyegwaom"]

[ext_resource type="Script" path="res://ui/die_menu.gd" id="1_mjh6q"]

[node name="DieMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjh6q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.462745, 0.231373, 0.211765, 0.615686)

[node name="DiedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -120.0
offset_right = 80.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 27
text = "You Died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 240.0
offset_top = 179.0
offset_right = 400.0
offset_bottom = 247.0

[node name="RestartButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../QuitButton")
text = "Restart
"

[node name="QuitButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../RestartButton")
focus_neighbor_right = NodePath("../RestartButton")
text = "Quit
"

[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
